# HiTMicTools

./: .gitignore  .readthedocs.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  setup.py
constraints/: scicore-py39-cu121.txt  windows-py39-cu124.txt
docs/: gpu-diagnostics-guide.md  requirements.txt
docs/source/: conf.py  create_bundles.md  index.md  launch_analysis.md  launch_analysis_with_tracking.md  models.md  using SLURM.md
src/HiTMicTools/: __init__.py  batch_ops.py  build_pipeline.py  cli.py  confreader.py  main.py  memlogger.py  model_bundler.py  processing_tools.py  roi_analyser.py  roi_analyser_gpu.py  segmentation_model.py  utils.py  workflows.py
src/HiTMicTools/data_analysis/: analysis_tools.py  plotting_tools.py
src/HiTMicTools/img_preprocessing/: funcs.py  img_processor.py
src/HiTMicTools/img_processing/: array_ops.py  funcs.py  img_ops.py  img_processor.py  mask_ops.py  utils.py
src/HiTMicTools/model_arch/: basemodel.py  flexresnet.py  nafnet.py
src/HiTMicTools/model_components/: base_model.py  cell_classifier.py  cell_classifier_cuda.py  focus_restorer.py  image_scaler.py  oof_detector.py  pi_classifier.py  scsegmenter.py  scsegmenter_nms_optim.py  segmentation_model.py
src/HiTMicTools/pipelines/: ASCT_ImageProcessing.py  ASCT_cellasic.py  ASCT_focusrestore.py  ASCT_scsegm.py  ASCT_zaslavier.py  StandardAnalysis.py  __init__.py  base_pipeline.py  e022_toprak_analysis.py  oof_detection.py  toprak_updated.py  toprak_updated_nn.py
tests/: test_cellasic_crop.py  test_hungarian_tracker.py  test_model_bundler.py  test_roi_analyser.py  test_safe_zip_extraction.py  tests_workflows.py
tests/img_processing/: tests_array_ops.py  tests_img_ops.py  tests_masks_ops.py
tests/model_components/: test_oof_detector.py  test_scsegmenter.py
tests/resource_management/: tests_memlogger.py  tests_sysutils.py
(+17 files in other folders)
